# cpp_classes_project

./: CMakeLists.txt  README.md
src/: main.cpp
src/Pitch/: Pitch.h  PitchManager.cpp  PitchManager.h
src/club/: Club.h  ClubManager.cpp  ClubManager.h
src/match/: Match.h  MatchManager.cpp  MatchManager.h
src/person/: Person.h  PersonManager.cpp  PersonManager.h  Player.h  Position.h  Role.h  Staff.h
src/person/player/: Player.h  PlayerManager.cpp  PlayerManager.h
src/person/staff/: Role.h  Staff.h  StaffManager.cpp  StaffManager.h
src/stadium/: Stadium.h  StadiumManager.cpp  StadiumManager.h
src/utils/: Country.h  IdGenerator.cpp  IdGenerator.h
test/Pitch/: PitchManagerTest.cpp
test/Stadium/: StadiumManagerTest.cpp
test/club/: ClubManagerTest.cpp
test/match/: MatchManagerTest.cpp
test/person/: PersonManagerTest.cpp
test/person/player/: PlayerManagerTest.cpp
test/person/staff/: StaffManagerTest.cpp
test/stadium/: StadiumManagerTest.cpp
test/utils/: IdGeneratorTest.cpp
